<resources>
    <string name="app_name">s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="fruit_basket">Fruit Basket</string>
    <string name="my_fruit_basket">my fruit basket</string>
    <string name="hello_explore_your_dream_fruit">Hello Explore Your Dream Fruit</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="my_order_fragment">My Order Fragment</string>
    <string name="favourite">Favourite</string>
    <string name="my_order">My Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="fruitshoppig_fruit_com">fruitshoppig@fruit.com</string>
    <string name="welcome">Welcome</string>
    <string name="log_out">Log Out</string>
    <string name="search_your_fruit">Search your Fruit!</string>
    <string name="new_arrival">New Arrival</string>
    <string name="what_do_you_want">What do you want ?</string>
    <string name="_10_00_23_00">10:00 - 23.00</string>
    <string name="_5_0">5.0</string>
    <string name="product_name">Product Name</string>
    <string name="fig">Fig</string>
    <string name="_6_00_23_00">6:00 - 23:00</string>
    <string name="min_35">Min - $35</string>
</resources>