<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_order"
            android:icon="@drawable/ic_baseline_shopping_bag_24"
            android:title="@string/my_order" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_cart" />
    </group>
</menu>