<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity">

    <ImageView
        android:foreground="@drawable/forground_design"
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="-137dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="287dp"
        android:layout_height="55dp"
        android:fontFamily="@font/lobster"
        android:text="@string/fruit_basket"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="355dp"
        android:layout_height="33dp"
        android:text="@string/hello_explore_your_dream_fruit"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:onClick="register"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias=".7"
        android:textStyle="bold"
        app:layout_constraintWidth_percent=".8"
        android:background="@drawable/btn_bg_design"/>

    <TextView
        android:layout_width="356dp"
        android:layout_height="20dp"
        android:text="@string/sign_in"
        android:textColor="#FBFBFB"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:textAlignment="center"
        android:onClick="Login"/>


</androidx.constraintlayout.widget.ConstraintLayout>